feat: implement idx qry 3
